Added .tar file target
SVN-Revision: 434

--- a/build.properties
+++ b/build.properties
@@ -95,6 +95,7 @@ dir.output.conf.demo.thickclient=${dir.output.project}/${dir.conf.demo.thickclie
 #
 #################################################################################
 file.output.zip=cacoresdk.zip
+file.output.tar=cacoresdk.tar
 
 file.conf=${dir.conf}/deploy.properties
 
