*** empty log message ***
SVN-Revision: 465

--- a/conf/hibernate/hibernate.properties
+++ b/conf/hibernate/hibernate.properties
@@ -26,7 +26,7 @@ hibernate.query.substitutions true 1, false 0, yes 'Y', no 'N'
 ## Oracle
 @DBTYPE_ORACLE@hibernate.connection.url jdbc:oracle:thin:@@SERVERNAME@:1521:@DBNAME@
 @DBTYPE_ORACLE@hibernate.dialect org.hibernate.dialect.Oracle9Dialect
-#@DBTYPE_ORACLE@hibernate.dialect com.p6spy.engine.spy.P6SpyDriver
+#@DBTYPE_ORACLE@hibernate.connection.driver_class com.p6spy.engine.spy.P6SpyDriver
 @DBTYPE_ORACLE@hibernate.connection.driver_class oracle.jdbc.driver.OracleDriver
 
 hibernate.connection.username @DBUSER@
