XML XSD Schema changes to include associations
SVN-Revision: 466

--- a/conf/resources/server/xml.properties
+++ b/conf/resources/server/xml.properties
@@ -1,4 +1,5 @@
 mapping-file=xml-mapping.xml
+unmarshaller-mapping-file=unmarshaller-xml-mapping.xml
 validation=false
 context=cabig
 marshaller=gov.nih.nci.common.util.caCOREMarshaller
