--- a/conf/web/WEB-INF/web.xml
+++ b/conf/web/WEB-INF/web.xml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-
-<!DOCTYPE web-app
-PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-"http://java.sun.com/j2ee/dtds/web-app_2_3.dtd">
-
-
-<web-app>
+<web-app id="WebApp_9" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<context-param>
        	<param-name>cacoreBeans.Properties</param-name>
 		<param-value>cacoreBeans.properties</param-value>
@@ -13,7 +7,7 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
 	
 	<context-param>
 	    <param-name>cacoreFormat.xsl</param-name>
-		<param-value>xslt/cacoreFormat.xsl</param-value>
+		<param-value>xslt/cacoreFormat2.xsl</param-value>
 	</context-param>
 	<context-param>
 		<param-name>rowCounter</param-name>
@@ -26,10 +20,22 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
 
 	<filter>
 		<filter-name>CSMHTTPFilter</filter-name>
+		<!--  
 		<display-name>CSMHTTPFilter</display-name>
 		<description></description>
+		-->
 		<filter-class>gov.nih.nci.system.proxy.CSMHTTPFilter</filter-class>
 	</filter>
+
+	<filter> 
+		<filter-name>struts2</filter-name> 
+		<filter-class>org.apache.struts2.dispatcher.FilterDispatcher</filter-class>
+		<init-param>
+        	<param-name>actionPackages</param-name>
+        	<param-value>gov.nih.nci.system.struts.action</param-value>
+        </init-param>
+		
+	</filter> 
 
 	<filter-mapping>
 		<filter-name>CSMHTTPFilter</filter-name>
@@ -41,6 +47,27 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
 		<url-pattern>/GetHTML</url-pattern>
 	</filter-mapping>
 
+	<filter-mapping> 
+		<filter-name>struts2</filter-name> 
+		<url-pattern>/*</url-pattern> 
+	</filter-mapping> 
+
+	<listener> 
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class> 
+	</listener> 
+<!-- 
+        This typically isn't required, as the taglib is included in struts-core.jar.
+        If you really need a taglib configuration within web.xml,
+        copy struts2-core/core/src/main/resources/META-INF/struts-tags.tld
+        to the WEB-INF directory as struts-tags.tld.
+     
+--> 
+<!-- 
+taglib>
+        <taglib-uri>/s</taglib-uri>
+        <taglib-location>/WEB-INF/struts-tags.tld</taglib-location>
+    </taglib
+--> 
 	<servlet>
 		<servlet-name>sdkstartup</servlet-name>
 		<servlet-class>
@@ -67,18 +94,20 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
     
     <servlet>
         <servlet-name>AxisServlet</servlet-name>
-        <display-name>Apache-Axis Servlet</display-name>
-        <servlet-class>org.apache.axis.transport.http.AxisServlet</servlet-class>
+        <servlet-class>org.apache.axis.transport.http.AxisServlet</servlet-class> 
     </servlet>
+
     <servlet>
         <servlet-name>GetXML</servlet-name>
         <servlet-class>gov.nih.nci.system.proxy.HTTPQuery</servlet-class>        	
     </servlet>
+
     <servlet>
     	<servlet-name>GetHTML</servlet-name>
     	<servlet-class>gov.nih.nci.system.proxy.HTTPQuery</servlet-class>        	
     </servlet>
-	<servlet>
+
+    <servlet>
     	<servlet-name>Happy</servlet-name>
 		<jsp-file>/Happy.jsp</jsp-file>     	
     </servlet>
@@ -113,13 +142,16 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
     	<servlet-name>GetHTML</servlet-name>
       	<url-pattern>/GetHTML</url-pattern>
     </servlet-mapping>
+
     <servlet-mapping>
     	<servlet-name>Happy</servlet-name>
       	<url-pattern>/Happy</url-pattern>
     </servlet-mapping>
 
 	<welcome-file-list>
-		<welcome-file>Happy.jsp</welcome-file>
+		<!-- welcome-file>Happy.jsp</welcome-file -->
+		<welcome-file>index.html</welcome-file>
+		
 	</welcome-file-list>
 	
 </web-app>
