Redesigned UI Changes
SVN-Revision: 469

--- a/build.properties
+++ b/build.properties
@@ -42,6 +42,7 @@ dir.conf.database-scripts=${dir.conf}/database-scripts
 dir.conf.template=${dir.conf}/codegen/template
 dir.conf.control=${dir.conf}/codegen/control-files
 dir.conf.spring=${dir.conf}/spring
+dir.conf.struts2=${dir.conf}/struts2
 dir.conf.hibernate=${dir.conf}/hibernate
 dir.conf.web=${dir.conf}/web
 dir.conf.webservice=${dir.conf}/webservice
@@ -82,6 +83,7 @@ dir.output.conf.database-scripts=${dir.output.project}/${dir.conf.database-scrip
 dir.output.conf.control=${dir.output.project}/${dir.conf.control}
 dir.output.conf.template=${dir.output.project}/${dir.conf.template}
 dir.output.conf.spring=${dir.output.project}/${dir.conf.spring}
+dir.output.conf.struts2=${dir.output.project}/${dir.conf.struts2}
 dir.output.conf.hibernate=${dir.output.project}/${dir.conf.hibernate}
 dir.output.conf.web=${dir.output.project}/${dir.conf.web}
 dir.output.conf.webservice=${dir.output.project}/${dir.conf.webservice}
