--- a/conf/struts2/struts.properties
+++ b/conf/struts2/struts.properties
@@ -1,3 +1,3 @@
-struts.devMode = true
+struts.devMode = false
 struts.enable.DynamicMethodInvocation = false
 struts.custom.i18n.resources=package.properties
