changed context from cabig to caCORE
SVN-Revision: 491

--- a/conf/resources/server/xml.properties
+++ b/conf/resources/server/xml.properties
@@ -1,7 +1,7 @@
 mapping-file=xml-mapping.xml
 unmarshaller-mapping-file=unmarshaller-xml-mapping.xml
 validation=false
-context=cabig
+context=caCORE
 marshaller=gov.nih.nci.common.util.caCOREMarshaller
 unmarshaller=gov.nih.nci.common.util.caCOREUnmarshaller
 classification=caCORE
