--- a/conf/download/download.properties
+++ b/conf/download/download.properties
@@ -1,10 +1,10 @@
 ## TOMCAT urls
-tomcat.url.primary = http://apache.us.lucid.dk/tomcat/tomcat-4/v4.1.34/bin/apache-tomcat-4.1.34.zip
-tomcat.url.mirror  = http://apache.us.lucid.dk/tomcat/tomcat-4/v4.1.34/bin/apache-tomcat-4.1.34.zip
+tomcat.url.primary = http://www.apache.org/dist/tomcat/tomcat-5/v5.5.20/bin/apache-tomcat-5.5.20.zip      
+tomcat.url.mirror  = http://mirror.cc.columbia.edu/pub/software/apache/tomcat/tomcat-5/v5.5.20/bin/apache-tomcat-5.5.20.zip
 
 ##TOMCAT File names to be parsed
-tomcat.file       = apache-tomcat-4.1.34.zip
-tomcat.unzip.path = apache-tomcat-4.1.34
+tomcat.file       = apache-tomcat-5.5.20.zip
+tomcat.unzip.path = apache-tomcat-5.5.20
 
 ## MYSQL URLS
 mysql.url.primary.windows = http://dev.mysql.com/get/Downloads/MySQL-4.1/mysql-noinstall-4.1.21-win32.zip/from/ftp://ftp.orst.edu/pub/mysql/
