corrected invalid "file" appender
SVN-Revision: 498

--- a/conf/resources/server/log4j.properties
+++ b/conf/resources/server/log4j.properties
@@ -19,7 +19,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
 
 #log4j.rootLogger=warn, stdout
-log4j.rootLogger=warn, file
+log4j.rootLogger=warn, stdout
 log4j.logger.org.hibernate=info
 
 ### log just the SQL
@@ -40,3 +40,5 @@ log4j.logger.org.hibernate.tool.hbm2ddl=debug
 ### enable the following line if you want to track down connection ###
 ### leakages when using DriverManagerConnectionProvider ###
 #log4j.logger.org.hibernate.connection.DriverManagerConnectionProvider=trace
+
+log4j.logger.gov.nih.nci=debug
