Fix for [#4495] Not creating the file: unmarshaller-xml-mapping.xml.
SVN-Revision: 518

--- a/build.properties
+++ b/build.properties
@@ -118,6 +118,7 @@ file.control.schemageneration=schemageneration.xml
 file.control.systemProperties=CORESystem.properties
 file.control.wsdd=wsddUtil.xml
 file.control.xmlmappinggeneration=castormappinggeneration.xml
+file.control.xmlunmarshallermappinggeneration=castorunmarshallermappinggeneration.xml
 
 file.framework.package=codegen.jar
 
