UI Changes - Make Happy.jsp the default "Welcome" page...
SVN-Revision: 520

--- a/conf/web/WEB-INF/web.xml
+++ b/conf/web/WEB-INF/web.xml
@@ -150,8 +150,8 @@ taglib>
     </servlet-mapping>
 
 	<welcome-file-list>
-		<!-- welcome-file>Happy.jsp</welcome-file -->
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>Happy.jsp</welcome-file>
+		<!--  welcome-file>index.html</welcome-file -->
 		
 	</welcome-file-list>
 	
