ThreadLocal based implementation
SVN-Revision: 521

--- a/conf/resources/server/CORESystem.properties
+++ b/conf/resources/server/CORESystem.properties
@@ -15,3 +15,5 @@ PROPERTY_FILE=cacoreBeans.properties
 #Debug (Print) stack trace on JSP page? 
 DEBUG_STACKTRACE=FALSE
 
+#Security Policy 1=Thread, 2=JVM based
+SECURITY_POLICY=2
