--- a/conf/resources/server/CORESystem.properties
+++ b/conf/resources/server/CORESystem.properties
@@ -17,3 +17,9 @@ DEBUG_STACKTRACE=FALSE
 
 #Security Policy 1=Thread, 2=JVM based
 SECURITY_POLICY=2
+
+#CSM Security properties to be used on the server side
+CSM_APPLICATION_NAME=@APPLICATION_NAME@
+CSM_DEFAULT_SECURITY_LEVEL=@DEFAULT_SECURITY_LEVEL@
+CSM_DEFAULT_SESSION_TIMEOUT=@DEFAULT_SESSION_TIMEOUT@
+CSM_AUTHENTICATION_DISABLED=@AUTHENTICATION_DISABLED@
