Added security property for configurable authentication
SVN-Revision: 557

--- a/conf/deploy.properties
+++ b/conf/deploy.properties
@@ -1,6 +1,6 @@
 ################################################################################
 #
-#  caCORE SDK v1.1 
+#  caCORE SDK v3.2 
 #
 #  Filename:     deploy.properties
 #
@@ -139,6 +139,16 @@ application_name=sdk
 # 0 indicates security off by default
 ######################################
 default_security_level=0
+
+######################################
+# Determines whether authentication
+# is disabled or not
+# 
+# no - perform authentication (default)
+# yes - assume grid based authentication
+######################################
+authentication_disabled=no
+
 
 ######################################
 # Determines the default timeout for 
