XML, XSD, POJO generation changes...
SVN-Revision: 559

--- a/build.properties
+++ b/build.properties
@@ -113,6 +113,7 @@ file.control.hbcgeneration=hbcgeneration.xml
 file.control.junitgeneration=junitgeneration.xml
 file.control.ormgeneration=ormgeneration.xml
 file.control.ormimplgeneration=implormgeneration.xml
+file.control.pojobeangeneration=pojobeangeneration.xml
 file.control.remoteservice=remoteService.xml
 file.control.schemageneration=schemageneration.xml
 file.control.systemProperties=CORESystem.properties
