--- a/conf/deploy.properties
+++ b/conf/deploy.properties
@@ -24,7 +24,7 @@ java_home=C:/java/j2sdk1.4.2_08
 #
 ######################################
 mysql_home=C:/mysql/mysql-4.1.21
-j2se_container_home=c:/jboss-4.0.4.GA
+j2se_container_home=c:/jboss-4.0.2
 #j2se_container_home=c:/tomcat/${tomcat.unzip.path}
 #j2se_container_home=c:/jboss-4.0.4.GA
 
@@ -41,7 +41,7 @@ webservice_name=exampleService
 #  MODEL PROPERTIES
 #
 ######################################
-model_filename=cabioExampleDomainModel.xmi
+model_filename=sdk-test.xmi
 fixed_filename=fixed_cabioExampleDomainModel.xmi
 
 include_package=.*domain.*
@@ -69,7 +69,7 @@ web_server_port=8080
 container_type=jboss
 jboss_configuration=default
 
-start_container=yes
+start_container=no
 
 ######################################
 #
@@ -80,11 +80,11 @@ start_container=yes
 # "mysql", "oracle" or "db2"
 #
 ######################################
-database_type=mysql
-db_server_name=localhost
-db_user=cabiouser
-db_password=cabio
-schema_name=cacore
+database_type=oracle
+db_server_name=cbiodb30.nci.nih.gov
+db_user=CACORESDK_QA
+db_password=c0r3ga!
+schema_name=CBTEST
 
 start_mysql=no
 
@@ -108,8 +108,8 @@ datadump_name=cabioexampledata.SQL
 ######################################
 create_cache=yes
 #cachepath=C:/tomcat/temp/cache
-#cachepath=C:/jboss-4.0.2/cache/cache
-cachepath=C:/jboss-4.0.4.GA/cache/cache
+cachepath=C:/jboss-4.0.2/cache/cache
+#cachepath=C:/jboss-4.0.4.GA/cache/cache
 #cachepath=/usr/local/jboss-4.0.2/server/default/log/cache
 
 
@@ -138,7 +138,7 @@ application_name=sdk
 # 1 indicates security on by default
 # 0 indicates security off by default
 ######################################
-default_security_level=0
+default_security_level=1
 
 ######################################
 # Determines whether authentication
@@ -148,6 +148,21 @@ default_security_level=0
 # yes - assume grid based authentication
 ######################################
 authentication_disabled=no
+
+
+######################################
+# CSM Database Connection Properties.
+# 1. Database URL for the CSM Database
+# 2. Database User Name
+# 3. Database Password
+# 4. Database Dialect (Hibernate)
+# 5. Database Driver
+######################################
+csm_database_url=jdbc:oracle:thin:@cbiodb30.nci.nih.gov:1521:CBTEST
+csm_database_user_name=CACORESDK_QA
+csm_database_password=c0r3ga!
+csm_database_dialect=org.hibernate.dialect.OracleDialect
+csm_database_driver=oracle.jdbc.driver.OracleDriver
 
 
 ######################################
