SDK Test related changes...
SVN-Revision: 593

--- a/conf/deploy.properties
+++ b/conf/deploy.properties
@@ -43,6 +43,8 @@ webservice_name=exampleService
 ######################################
 model_filename=cabioExampleDomainModel.xmi
 fixed_filename=fixed_cabioExampleDomainModel.xmi
+#model_filename=sdk-test.xmi
+#fixed_filename=fixed_sdk-test.xmi
 
 include_package=.*domain.*
 exclude_package=
