--- a/SDK4/conf/codegen/log4j.properties
+++ b/SDK4/conf/codegen/log4j.properties
@@ -40,7 +40,7 @@ log4j.logger.org.hibernate.tool.hbm2ddl=debug
 ### leakages when using DriverManagerConnectionProvider ###
 #log4j.logger.org.hibernate.connection.DriverManagerConnectionProvider=trace
 
-log4j.logger.gov.nih.nci=error
+log4j.logger.gov.nih.nci=info
 log4j.logger.org.springframework=error
 
 
