--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -1,23 +1,37 @@
-
-
-################################################################################   
-# Project Specific Settings
-# Value of the PROJECT_NAME property will be used to create 1).war file 2)Create client JAR file and 3)Create namespace for web services 
-################################################################################  
+##################################################################################
+#  PROJECT PROPERTIES
+#
+#  Value of the PROJECT_NAME property will be used to create 1).war file 
+#  2)Create client JAR file and 3)Create namespace for web services.
+#
+#  NAMESPACE_PREFIX is used to create the XSDs. If XSDs are to be used for the
+#  cagrid, the value of the NAMESPACE_PREFIX is same as the GME namespace
+##################################################################################
 PROJECT_NAME=example
 NAMESPACE_PREFIX=gme://caCORE.caCORE/3.2/
 
 
+################################################################################## 
+#  MODEL PROPERTIES
+#
+#  XMI_FILE specifies the name of the file which contains the object/data model. 
+#  The file is to be placed under models/xmi directory.
+##################################################################################
 XMI_FILE=sdk.xmi
 
 
-################################################################################   
-# Database Connection Settings
+##################################################################################
+#  DATABASE CONNECTION PROPERTIES
 # 
-# If USE_JNDI_BASED_CONNECTION=yes then DB_JNDI_URL is used to obtain the connection and get data 
-# If USE_JNDI_BASED_CONNECTION=no then DB_DRIVER, DB_CONNECTION_URL, DB_USERNAME and DB_PASSWORD is used to initialize the collection and get data
+#  If USE_JNDI_BASED_CONNECTION=yes then DB_JNDI_URL is used to obtain the 
+#  connection and get data. 
+#  If USE_JNDI_BASED_CONNECTION=no then DB_DRIVER, DB_CONNECTION_URL, DB_USERNAME
+#  and DB_PASSWORD is used to initialize the collection and get data.
 #
-################################################################################  
+#  DB_DIALECT is used by the Hibernate to prepare the database specific queries
+#
+#  CACHE_PATH is being used by the EHCache to store its cache files on disk
+##################################################################################
 USE_JNDI_BASED_CONNECTION=no
 DB_JNDI_URL=
 
@@ -28,4 +42,11 @@ DB_PASSWORD=c0r3ga!
 
 DB_DIALECT=org.hibernate.dialect.Oracle9Dialect
 
+##################################################################################
+#  ADVANCED PROPERTIES
+# 
+#  CACHE_PATH is being used by the EHCache to store its cache files on disk
+#  java.io.tmpdir will create the cache files in the temporary directory. 
+#  User can choose to specify any absolute path for the cache files
+##################################################################################
 CACHE_PATH=java.io.tmpdir
